--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "workspaces": [
     "apps/*",
+    "services/*",
     "packages/*"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "docker-compose -f docker-compose.dev.yml up --build"
+    "dev": "docker-compose -f docker-compose.dev.yml up --build",
+    "undev": "docker-compose -f docker-compose.dev.yml down"
   },
   "repository": {
     "type": "git",
