--- a/apps/storefront/Dockerfile
+++ b/apps/storefront/Dockerfile
@@ -1,7 +1,7 @@
 # apps/storefront/Dockerfile
 
 # --- Stage 1: Dependency Installation ---
-FROM node:22-alpine AS dependencies
+FROM node:22-bullseye AS dependencies
 WORKDIR /app
 
 # Copy lockfiles and configuration files for caching
@@ -27,8 +27,10 @@ COPY . .
 # Set the working directory to the storefront app for running
 WORKDIR /app/apps/storefront
 
+COPY --from=dependencies /app/node_modules ./
+
 # Expose Vite dev server port
 EXPOSE 5173
 
 # Start Vite dev server
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5173"]
