--- a/apps/storefront/tsconfig.app.json
+++ b/apps/storefront/tsconfig.app.json
@@ -22,7 +22,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@showcase/types": ["../../packages/types"]
+    }
   },
   "include": ["src"]
 }
