--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "create:page": "./scripts/page.sh"
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
