--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,8 +17,6 @@ services:
       # Enable polling for HMR to function correctly with volumes
       - CHOKIDAR_USEPOLLING=true
     command: ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
-    stdin_open: true
-    tty: true
     depends_on:
       - products
     networks:
@@ -31,13 +29,17 @@ services:
     ports:
       - "3001:3001"
     volumes:
-      - ./services/products:/app
-      - /app/node_modules
+      - ./services/products/src:/app/src
+      - ./services/products/package.json:/app/package.json
+      - ./services/products/tsconfig.json:/app/tsconfig.json
     environment:
       - NODE_ENV=development
       - DATABASE_URL=postgres://postgres:postgres@products-db:5432/products
     depends_on:
       - products-db
+    networks:
+      - turborepo-network
+    command: ["npm", "run", "start"]
 
   products-db:
     image: postgres:16-alpine
@@ -58,7 +60,6 @@ services:
       retries: 5
 
 volumes:
-  turborepo-cache:
   products-db-data:
 
 networks:
