--- a/apps/admin/tsconfig.app.json
+++ b/apps/admin/tsconfig.app.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
@@ -27,8 +26,7 @@
 
     "baseUrl": ".",
     "paths": {
-      "@showcase/types": ["../../packages/types"],
-      "@showcase/ui": ["../../packages/ui"]
+      "@showcase/types": ["../../packages/types"]
     }
   },
   "include": ["src"]
